# land-grab-2

./: .gitattributes  .gitignore  APPENDIX-A.md  METHODOLOGY.md  README.md  USER-GUIDE.md  common.py  config.py  constants.py  create_state_trust_dataset.py  create_university_dataset.py  environment.yml  package-lock.json  package.json  pyproject.toml  query.py  requirements.txt  run.py  setup.py  state_trust_config.py  university_config.py
data/state_trust/merged/: az-merged.csv  az-merged.geojson  az.csv  co-merged.csv  co-merged.geojson  co.csv  co.geojson  id-merged.csv  id-merged.geojson  id.csv  id.geojson  mn-merged.csv  mn-merged.geojson  mn.csv  mn.geojson  mt-merged.csv  mt-merged.geojson  mt.csv  mt.geojson  nd-merged.csv  nd-merged.geojson  nd.csv  nd.geojson  ne-merged.csv  ne-merged.geojson  nm-merged.csv  nm-merged.geojson  nm.geojson  ok-merged.csv  ok-merged.geojson  ok.csv  ok.geojson  sd-merged.csv  sd-merged.geojson  sd.csv  sd.geojson  tx-merged.csv  tx-merged.geojson  tx.geojson  (+12 more)
data_input/: az_ua_parcel_list_raw.csv
land_grab/: common.py  constants.py  db.py
land_grab/db/: gen_regrid_table_def.py  gristdb.py  tables.py
land_grab/state_trust_lands/: create_state_trust_dataset.py  sd_CAS_parcel_processing.py  sd_parcel_match.py  state_trust_config.py
land_grab/university_real_estate/: create_university_dataset.py  parcel_extractor.py  parcel_list_check.py  regrid_matching.py  university_config.py
land_grab_2/: utils.py
land_grab_2/public_data/: Grist_STLs-Clipped-to-Reservations-BY-TRIBE.xlsx
land_grab_2/uni_holdings_dataset/: check_overlap.py  combine_reverse_search_results.py  reverse_search.py  reverse_search_single.py
land_grab_2/utilities/: overlap.py  utils.py
local_config/: db_cred.py
notebooks/: eda-regrid-match.ipynb
public_data/: Grist_STLs-Clipped-to-Reservations.xlsx
public_data/Spatial Files/: Grist_National-State-Trust-Lands-wgs84.geojson  Grist_National-State-Trust-Lands.geojson  Grist_STLs-Tribal-Summary-WGS84.geojson  Grist_STLs-Tribal-Summary.geojson  Grist_STLs-University-Summary-WGS84.geojson  tribe-summary-condensed-wgs84.geojson
scripts/: activity_match.py  check_overlap.py  create_state_trust_dataset.py  csv_to_db.py  populate_regrid_table.py  regrid_parcel_id_match.py  regrid_parcel_match_against_db.py  regrid_parcel_match_to_db.py  reverse_search.py
scripts/activity_match_extras/: rewrite_rules.json
scripts/db/: create_regrid_table.py  populate_regrid_table.py
tasks/: common_funcs.txt
tasks/init_database/: csv_to_db.py
tests/: test_activity_match.py  test_db.py  test_mo_univ_missouri_parser.py
tests/stl_dataset/: test_step_1.py
tests/uni_holdings_dataset/: test_mo_univ_missouri_parser.py
(+1473 files in other folders)
