[tool.poetry]
name = "land-grab-2"
version = "0.1.0"
description = ""
authors = ["Marcelle Bonterre <laanak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
geopandas = "^0.14.0"
bmi-arcgis-restapi = "^2.4.4"
urllib3 = { version = "1.26.16", extras = ["secure"] }
pandas = "^2.1.0"
pysftp = "^0.2.9"
tqdm = "^4.66.1"
dask = { version = "2023.8.1", extras = ["complete"] }
compose = "^1.5.0"
ratelimiter = "^1.2.0.post0"
numpy = "*"
psycopg = { extras = ["binary"], version = "^3.1.10" }
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"


[tool.poetry.scripts]
build-stl-dataset = "land_grab_2.stl_dataset.step_1.build_dataset:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
