[tool.poetry]
name = "land-grab-2"
version = "0.1.0"
description = ""
authors = ["Marcelle Bonterre <laanak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "*"
geopandas = "*"
bmi-arcgis-restapi = "*"
urllib3 = { version = "*", extras = ["secure"] }
pandas = "*"
pysftp = "*"
tqdm = "*"
dask = { version = "*", extras = ["complete"] }
compose = "*"
ratelimiter = "*"
numpy = "*"
psycopg = { extras = ["binary"], version = "*" }
requests = "*"
openpyxl = "*"
joblib = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
snakeviz = "^2.2.0"
jupyter = "^1.0.0"
cython = "^3.0.3"


[tool.poetry.scripts]
build-stl-dataset = "land_grab_2.stl_dataset.step_1.build_dataset:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
